--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -60,6 +60,8 @@
     </video>
     <div class="upPage">
       <div class="hero-container" data-aos="fade-up">
+      </div>
+      <div class="hero-container" data-aos="fade-up">
         <h1>Welcome To Tee's Movies Shop</h1>
         <h2>We Help You Look For Your Favorite Movies <i class="fa fa-film" style="font-size:48px;color:white"></i>
         </h2>
@@ -69,7 +71,7 @@
               <div class="tb">
                  <div class="td"><label>
                              </label>
-                   <input type="text" th:field="*{movieName}" name="text" id="text" placeholder="Enter Search" required></div>
+                   <label for="text"></label><input type="text" th:field="*{movieName}" name="text" id="text" placeholder="Enter Search" required></div>
               <div class="td" id="s-cover">
                 <button type="submit">
                   <div id="s-circle"></div>
